--- a/work/eighth/index.html
+++ b/work/eighth/index.html
@@ -42,6 +42,36 @@
       // .offset().top 要素の位置を取得します。
       // .fadeIn() 要素をフェードインさせる。
       // .fadeOut() 要素をフェードアウトさせる。
+
+      // メニューボタンの実装
+      var position = 0;
+      $('.menu__btn').click(function() {
+        var scrollPoint = $(this).data('scroll-place-type');
+        $('.contents').children('p').each(function() {
+          if($(this).data('scroll-place-type') == scrollPoint) {
+            position = $(this).offset().top;
+          }
+        });
+        $('html, body').animate({
+          'scrollTop': position
+        });
+      });
+
+      // トップボタンの実装
+      $(window).scroll(function() {
+        console.log($(this).scrollTop());
+        if($(this).scrollTop() > 100) {
+          $('.scrollTopBtn').fadeIn();
+        } else {
+          $('.scrollTopBtn').fadeOut();
+        }
+      });
+
+      $('.scrollTopBtn').click(function() {
+        $('html, body').animate({
+          'scrollTop': 0
+        });
+      });
     </script>
   </body>
 </html>
