all時の処理を移動しました

--- a/work/fifth/index.html
+++ b/work/fifth/index.html
@@ -100,15 +100,17 @@
 
       $('.select').change(function() {
         var category = $(this).val();
-        $('.list').find('li').each(function() {
-          if($(this).data('category-type') === category) {
-            $(this).show();
-          } else if(category === 'all') {
-            $(this).show();
-          } else {
-            $(this).hide();
-          }
-        });
+        if(category === 'all'){
+          $('.list').find('li').show();
+        } else {
+          $('.list').find('li').each(function() {
+            if($(this).data('category-type') === category) {
+              $(this).show();
+            } else {
+              $(this).hide();
+            }
+          });
+        }
       });
     </script>
   </body>
