--- a/work/fourth/index.html
+++ b/work/fourth/index.html
@@ -57,7 +57,7 @@
       // .children() 要素の子要素を取得します。
       // .stop() 現在動作中のアニメーション処理を全て中止します。
 
-      $('.menu__list__title').parent('li').hover(function() {
+      $('.menu__list').children('li').hover(function() {
         $(this).children('.menu__list__childList').stop().slideDown();
       }, function() {
         $(this).children('.menu__list__childList').stop().slideUp();
